fix new layout issues on stacked, hide location picker tooltip when form closes

--- a/src/app/components/crowdsource/styles/layouts/stacked/_Stacked.scss
+++ b/src/app/components/crowdsource/styles/layouts/stacked/_Stacked.scss
@@ -94,6 +94,11 @@ $paneNavigationHeight: 40px;
         height: 100%;
       }
 
+      .map.force-on-top {
+        z-index: 50;
+        position: relative;
+      }
+
       .pane-navigation {
         display: none;
       }
