--- a/src/app/components/crowdsource/styles/layouts/stacked/themes/default.scss
+++ b/src/app/components/crowdsource/styles/layouts/stacked/themes/default.scss
@@ -40,14 +40,6 @@ $shadowColor: #fff;
       }
     }
 
-    .participate{
-      color: $actionText;
-
-      &:hover{
-        color: lighten($actionText, 10%);
-      }
-    }
-
   }
 
   .pane-navigation{
